# echo

./: .gitignore  README.md  flow.md  pyproject.toml
data/: identity.json
scripts/: build_dataset.py  build_modelfile.py  constants.py  infer_reply_context.py  infer_tweet_trigger.py  parse_archive.py  run_server.sh  tg_bot.py  train.py  upload.py
